--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="temperature_value_text_size">40sp</dimen>
     <dimen name="feels_like_text_size">30sp</dimen>
     <dimen name="fab_margin">20dp</dimen>
+    <dimen name="city_list_name_size">25sp</dimen>
 </resources>
