--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -114,9 +114,9 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue"
             android:text="xxxxxxxxxxxx" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image_condition_icon"
-            android:src="@drawable/flag_russia"
+            android:src="@drawable/ic_launcher_background"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_string_for_icon"
