--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:background="@drawable/fon">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_condition_icon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue" />
+    <!--        tools:src="@drawable/condition_none"-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_weather_details"
         android:layout_width="match_parent"
@@ -28,10 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:textSize="@dimen/city_details_name_country_of_city_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_cityName"
-            android:textSize="@dimen/city_details_name_country_of_city_size"
             tools:text="Russia" />
 
         <TextView
@@ -53,30 +63,29 @@
             android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_cityCoordinates"
+            app:layout_constraintTop_toBottomOf="@+id/tv_day_of_week"
             tools:text="Cloudy" />
 
         <TextView
             android:id="@+id/tv_temperatureLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15_dp"
-
-            android:text="@string/temperature_label"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/margin_10_dp"
+            app:layout_constraintEnd_toStartOf="@id/tv_feelsLikeLabel"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_condition" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_condition"
+            tools:text="@string/temperature_label" />
 
         <TextView
             android:id="@+id/tv_temperatureValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15_dp"
+            android:layout_marginTop="@dimen/margin_10_dp"
 
             android:textSize="@dimen/temperature_value_text_size"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tv_temperatureLabel"
+            app:layout_constraintStart_toStartOf="@+id/tv_temperatureLabel"
             app:layout_constraintTop_toBottomOf="@+id/tv_temperatureLabel"
             tools:text="+15" />
 
@@ -84,26 +93,26 @@
             android:id="@+id/tv_feelsLikeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15_dp"
-            android:text="@string/feels_like_label"
+            android:layout_marginTop="@dimen/margin_10_dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_temperatureValue" />
+            app:layout_constraintStart_toEndOf="@id/tv_temperatureLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tv_condition"
+            tools:text="@string/feels_like_label" />
 
         <TextView
             android:id="@+id/tv_feelsLikeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15_dp"
+            android:layout_marginTop="@dimen/margin_10_dp"
             android:textSize="@dimen/feels_like_text_size"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tv_feelsLikeLabel"
+            app:layout_constraintStart_toStartOf="@+id/tv_feelsLikeLabel"
             app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeLabel"
             tools:text="-23" />
 
         <TextView
-            android:id="@+id/tv_string_for_icon"
+            android:id="@+id/tv_day_of_week"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_15_dp"
@@ -111,18 +120,17 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue"
-            android:text="xxxxxxxxxxxx" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_cityCoordinates"
+            tools:text="Monday" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image_condition_icon"
-            android:src="@drawable/ic_launcher_background"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_string_for_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
+        <!--      <androidx.appcompat.widget.AppCompatImageView
+                  android:id="@+id/image_condition_icon"
+                  android:src="@drawable/condition_none"
+                  android:layout_width="150dp"
+                  android:layout_height="150dp"
+                  app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintEnd_toEndOf="parent"/>-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
