--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
     <dimen name="city_name_margin_top">50dp</dimen>
     <dimen name="margin_15_dp">15dp</dimen>
-    <dimen name="temperature_value_text_size">40sp</dimen>
+    <dimen name="margin_10_dp">10dp</dimen>
+    <dimen name="temperature_value_text_size">30sp</dimen>
     <dimen name="feels_like_text_size">30sp</dimen>
     <dimen name="condition_text_size">25sp</dimen>
     <dimen name="fab_margin">20dp</dimen>
