--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/fon">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/image_condition_icon"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="top"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue" />
-    <!--        tools:src="@drawable/condition_none"-->
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_weather_details"
         android:layout_width="match_parent"
@@ -63,7 +53,7 @@
             android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_day_of_week"
+            app:layout_constraintTop_toBottomOf="@+id/tv_dayOfWeek"
             tools:text="Cloudy" />
 
         <TextView
@@ -71,10 +61,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_10_dp"
+            android:text="@string/temperature_label"
             app:layout_constraintEnd_toStartOf="@id/tv_feelsLikeLabel"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_condition"
-            tools:text="@string/temperature_label" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_condition" />
 
         <TextView
             android:id="@+id/tv_temperatureValue"
@@ -94,10 +84,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_10_dp"
+            android:text="@string/feels_like_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_temperatureLabel"
-            app:layout_constraintTop_toBottomOf="@+id/tv_condition"
-            tools:text="@string/feels_like_label" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_condition" />
 
         <TextView
             android:id="@+id/tv_feelsLikeValue"
@@ -112,26 +102,106 @@
             tools:text="-23" />
 
         <TextView
-            android:id="@+id/tv_day_of_week"
+            android:id="@+id/tv_dayOfWeek"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_15_dp"
-            android:textSize="@dimen/feels_like_text_size"
+            android:layout_marginTop="@dimen/margin_10_dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_cityCoordinates"
             tools:text="Monday" />
 
-        <!--      <androidx.appcompat.widget.AppCompatImageView
-                  android:id="@+id/image_condition_icon"
-                  android:src="@drawable/condition_none"
-                  android:layout_width="150dp"
-                  android:layout_height="150dp"
-                  app:layout_constraintTop_toBottomOf="@+id/tv_feelsLikeValue"
-                  app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent"/>-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_conditionIcon"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="@dimen/margin_15_dp"
+            app:layout_constraintEnd_toStartOf="@+id/image_iconWindSpeed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_temperatureValue"
+            tools:src="@drawable/condition_none" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_iconHumidity"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintStart_toStartOf="@+id/image_iconWindSpeed"
+            app:layout_constraintTop_toTopOf="@+id/image_conditionIcon"
+            tools:src="@drawable/icon_humidity_png" />
+
+        <TextView
+            android:id="@+id/tv_humidityValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/image_iconHumidity"
+            app:layout_constraintStart_toStartOf="@+id/tv_windSpeedValue"
+            app:layout_constraintTop_toTopOf="@+id/image_iconHumidity"
+            tools:text="85%" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_iconWindSpeed"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="@dimen/margin_15_dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintEnd_toStartOf="@+id/tv_windSpeedValue"
+            app:layout_constraintStart_toEndOf="@+id/image_conditionIcon"
+            app:layout_constraintTop_toBottomOf="@+id/image_iconHumidity"
+            tools:src="@drawable/icon_wind_png" />
+
+        <TextView
+            android:id="@+id/tv_windSpeedValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/image_iconWindSpeed"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_iconWindSpeed"
+            app:layout_constraintTop_toTopOf="@+id/image_iconWindSpeed"
+            tools:text="18m/s" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_iconPressure"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="@+id/image_iconWindSpeed"
+            app:layout_constraintTop_toBottomOf="@+id/image_iconWindSpeed"
+            tools:src="@drawable/icon_pressure_png" />
+
+        <TextView
+            android:id="@+id/tv_pressureValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/image_iconPressure"
+            app:layout_constraintStart_toStartOf="@+id/tv_windSpeedValue"
+            app:layout_constraintTop_toTopOf="@+id/image_iconPressure"
+            tools:text="1004Pa" />
+
+        <!--<FrameLayout
+            android:id="@+id/fl_loadingLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="visible" />
+        </FrameLayout>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
