--- a/app/src/main/res/layout/fragment_weather_details_past.xml
+++ b/app/src/main/res/layout/fragment_weather_details_past.xml
@@ -8,10 +8,11 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
         android:src="@drawable/fon"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="centerCrop"
+        />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
