--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -195,7 +195,7 @@
                 app:layout_constraintTop_toTopOf="@+id/image_iconPressure"
                 tools:text="1004Pa" />
 
-            <!--<FrameLayout
+            <FrameLayout
                 android:id="@+id/fl_loadingLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -211,7 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:visibility="visible" />
-            </FrameLayout>-->
+            </FrameLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
