Lesson 8. Create HistoryFragment.kt Create fragment_history.xml Create loading_layout.xml (add it in all xml-s)

--- a/app/src/main/res/layout/fragment_weather_details.xml
+++ b/app/src/main/res/layout/fragment_weather_details.xml
@@ -16,12 +16,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ProgressBar
+        <include
+            android:id="@+id/includedLoadingLayout"
+            layout="@layout/loading_layout" />
+
+     <!--   <ProgressBar
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="visible" />
+            android:visibility="visible" />-->
     </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
