Lesson 8. Create fragment_history_recycler_item.xml Create icon for history -> ic_history.xml

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -15,9 +15,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!--tools:listitem="@layout/fragment_weather_list_recycler_item"-->
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/fragment_history_recycler_item" />
 
 
     <include
