--- a/app/src/main/res/layout/fragment_weather_list_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_weather_list_recycler_item.xml
@@ -7,6 +7,7 @@
     android:layout_margin="10dp"
     android:backgroundTint="@color/blue_light"
     app:cardCornerRadius="15dp"
+    app:cardElevation="2dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
