Lesson 9. HW 9. Add menu Contacts on Main Create ContentProviderForContactsFragment.kt and its XML.

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -8,6 +8,11 @@
     <item
         android:id="@+id/History"
         android:icon="@drawable/ic_history"
-        android:title="History"/>
+        android:title="History" />
+
+    <item
+        android:id="@+id/Contacts"
+        android:icon="@drawable/ic_contacts"
+        android:title="Contacts" />
 
 </menu>
