Lesson 9. HW 9. Finished ContentProviderFragment.kt

--- a/app/src/main/res/layout/fragment_content_provider.xml
+++ b/app/src/main/res/layout/fragment_content_provider.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fon"
-    tools:context=".view.contacts.ContentProviderForContactsFragment">
+    tools:context=".view.contacts.ContentProviderFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ll_containerForContacts"
