--- a/app/src/main/res/layout/fragment_weather_list.xml
+++ b/app/src/main/res/layout/fragment_weather_list.xml
@@ -74,7 +74,7 @@
         tools:listitem="@layout/fragment_weather_list_recycler_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_select_cities_region"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -82,6 +82,19 @@
         android:contentDescription="@string/fab"
         android:src="@drawable/flag_russia"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="56dp"
+        app:tint="@null" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_find_geoLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/fab"
+        android:src="@drawable/geo_location"
+        app:layout_constraintBottom_toTopOf="@id/fab_select_cities_region"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="56dp"
         app:tint="@null" />
@@ -100,12 +113,6 @@
             android:id="@+id/includedLoadingLayout"
             layout="@layout/loading_layout" />
 
- <!--       <ProgressBar
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="visible" />-->
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
